--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-	"name": "schulcloud-client",
-	"version": "0.0.1",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"dev": "webpack -d --watch",
-		"build": "webpack -p",
-		"lint": "eslint ./src ./test --ext .js",
-		"test": "npm run lint && npm run mocha",
-		"start": "node src/",
-		"startd": "nodemon server.js",
-		"mocha": "mocha test/ --recursive"
-	},
-	"author": "",
-	"license": "GPL",
-	"dependencies": {
-		"babel-core": "^6.2.1",
-		"babel-loader": "^6.2.0",
-		"babel-preset-es2015": "^6.1.18",
-		"babel-preset-react": "^6.1.18",
-		"express": "^4.14.0",
-		"express-urlrewrite": "^1.2.0",
-		"react": "^0.14.3",
-		"react-dom": "^0.14.3",
-		"react-komposer": "^1.13.1",
-		"react-router": "^3.0.0",
-		"serve-favicon": "^2.3.0",
-		"winston": "^2.2.0"
-	},
-	"devDependencies": {
-		"css-loader": "^0.25.0",
-		"eslint": "^3.8.1",
-		"eslint-plugin-react": "^6.4.1",
-		"extract-text-webpack-plugin": "^1.0.1",
-		"file-loader": "^0.9.0",
-		"json-loader": "^0.5.4",
-		"less": "^2.7.1",
-		"less-loader": "^2.2.3",
-		"style-loader": "^0.13.1",
-		"mocha": "^3.1.2",
-		"webpack": "^1.13.2"
-	}
+  "name": "schulcloud-client",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "webpack -d --watch",
+    "build": "webpack -p",
+    "lint": "eslint ./src ./test --ext .js",
+    "test": "npm run lint",
+    "start": "node src/",
+    "startd": "nodemon server.js",
+    "mocha": "mocha test/ --recursive"
+  },
+  "author": "",
+  "license": "GPL",
+  "dependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "express": "^4.14.0",
+    "express-urlrewrite": "^1.2.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-komposer": "^1.13.1",
+    "react-router": "^3.0.0",
+    "serve-favicon": "^2.3.0",
+    "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "css-loader": "^0.25.0",
+    "eslint": "^3.8.1",
+    "eslint-plugin-react": "^6.4.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "mocha": "^3.1.2",
+    "request": "^2.76.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2"
+  }
 }
