--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.16.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.8.1",
     "eslint-plugin-react": "^6.4.1",
