--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "babel-preset-react": "^6.1.18",
     "express": "^4.14.0",
     "express-urlrewrite": "^1.2.0",
+    "feathers-authentication": "^0.7.11",
+    "feathers-client": "^1.7.2",
+    "feathers-hooks": "^1.6.1",
     "jquery": "^3.1.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-komposer": "^1.13.1",
     "react-router": "^3.0.0",
     "serve-favicon": "^2.3.0",
+    "socket.io-client": "^1.5.1",
     "winston": "^2.2.0"
   },
   "devDependencies": {
