--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react-komposer": "^1.13.1",
     "react-router": "^3.0.0",
     "serve-favicon": "^2.3.0",
-    "socket.io-client": "^1.5.1",
-    "winston": "^2.2.0"
+    "socket.io-client": "^1.5.1"
   },
   "devDependencies": {
     "babel-polyfill": "^6.16.0",
