--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-komposer": "^1.13.1",
+    "react-player": "^0.12.0",
     "react-router": "^3.0.0",
     "serve-favicon": "^2.3.0",
     "winston": "^2.2.0"
