--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ node_js:
 services:
   - mongodb
 after_success:
-  - bash <(curl -X POST http://$url/update?apiKey=$apiKey&branch=$TRAVIS_BRANCH)
+  - bash <(curl -X POST --data "apiKey=$apiKey&branch=$TRAVIS_BRANCH" http://$url/update)
