--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack -d --watch",
+    "dev": "NODE_ENV=local webpack -d --watch",
     "build": "webpack -p",
     "deploy": "npm run build && ./deploy.sh",
     "lint": "eslint ./src ./test --ext .js",
