--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "feathers-hooks": "^1.6.1",
     "jquery": "^3.1.1",
     "react": "^0.14.3",
+    "react-cookie": "^0.4.8",
     "react-dom": "^0.14.3",
     "react-komposer": "^1.13.1",
     "react-player": "^0.12.0",
