--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-komposer": "^1.13.1",
     "react-player": "^0.12.0",
     "react-router": "^3.0.0",
+    "react-s-alert": "^1.2.1",
     "serve-favicon": "^2.3.0",
     "socket.io-client": "^1.5.1"
   },
