--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "feathers-client": "^1.7.2",
     "feathers-hooks": "^1.6.1",
     "feathers-subscriptions-manager": "^1.0.1",
-    "jquery": "^3.1.1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "feathers-reactive": "^0.4.1",
+	  "jquery": "^3.1.1",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
     "react-komposer": "^1.13.1",
     "react-player": "^0.12.0",
     "react-router": "^3.0.0",
     "react-s-alert": "^1.2.1",
+    "rxjs": "^5.0.0-rc.4",
     "serve-favicon": "^2.3.0",
     "socket.io-client": "^1.5.1"
   },
