--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-player": "^0.12.0",
     "react-router": "^3.0.0",
     "react-s-alert": "^1.2.1",
+    "react-tabs": "^0.8.2",
     "rxjs": "^5.0.0-rc.4",
     "serve-favicon": "^2.3.0",
     "socket.io-client": "^1.5.1"
