--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
     "no-unused-vars": [
       0
     ],
-	  "no-console": "off"
+	  "no-console": "off",
+	  "no-mixed-spaces-and-tabs": ["error", "smart-tabs"]
   }
 }
