--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-komposer": "^1.13.1",
     "react-player": "^0.12.0",
     "react-router": "^3.0.0",
+    "react-router-scroll": "^0.4.1",
     "react-s-alert": "^1.2.1",
     "react-select": "^1.0.0-rc.2",
     "react-tabs": "^0.8.2",
