--- a/package.json
+++ b/package.json
@@ -17,55 +17,55 @@
   "author": "",
   "license": "GPL",
   "dependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-urlrewrite": "^1.2.0",
-    "feathers-authentication": "^0.7.11",
-    "feathers-authentication-client": "^0.1.1",
-    "feathers-client": "^1.7.2",
-    "feathers-hooks": "^1.6.1",
+    "feathers-authentication": "^1.0.2",
+    "feathers-authentication-client": "^0.1.6",
+    "feathers-client": "^1.9.0",
+    "feathers-hooks": "^1.7.1",
     "feathers-reactive": "^0.4.1",
     "feathers-subscriptions-manager": "^1.0.1",
     "formsy-react": "^0.19.0",
     "formsy-react-components": "^0.9.0",
     "jquery": "^3.1.1",
     "oauth-1.0a": "^2.0.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "react-komposer": "^1.13.1",
-    "react-player": "^0.12.0",
-    "react-router": "^3.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-komposer": "^2.0.0",
+    "react-player": "^0.14.1",
+    "react-router": "^3.0.1",
     "react-router-scroll": "^0.4.1",
-    "react-s-alert": "^1.2.1",
+    "react-s-alert": "^1.2.2",
     "react-select": "^1.0.0-rc.2",
     "react-tabs": "^0.8.2",
-    "rxjs": "^5.0.0-rc.4",
-    "serve-favicon": "^2.3.0",
-    "socket.io-client": "^1.5.1"
+    "rxjs": "^5.0.3",
+    "serve-favicon": "^2.3.2",
+    "socket.io-client": "^1.7.2"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.16.0",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.8.1",
-    "eslint-plugin-react": "^6.4.1",
+    "babel-polyfill": "^6.20.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.13.1",
+    "eslint-plugin-react": "^6.9.0",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "imports-loader": "^0.6.5",
+    "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
-    "mocha": "^3.1.2",
-    "node-sass": "^3.10.1",
-    "postcss-loader": "^1.0.0",
-    "request": "^2.76.0",
-    "resolve-url-loader": "^1.6.0",
-    "sass-loader": "^4.0.2",
+    "mocha": "^3.2.0",
+    "node-sass": "^4.3.0",
+    "postcss-loader": "^1.2.2",
+    "request": "^2.79.0",
+    "resolve-url-loader": "^1.6.1",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "tether": "^1.3.7",
+    "tether": "^1.4.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "webpack": "^1.14.0"
   }
 }
