--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "GPL",
   "dependencies": {
     "react-dropzone": "^3.9.0",
-    "superagent": "^3.3.2"
+    "superagent": "^3.3.2",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
