--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "author": "",
   "license": "GPL",
   "dependencies": {
-    "react-dropzone": "^3.9.0",
-    "superagent": "^3.3.2",
+    "axios": "^0.15.3",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
@@ -38,6 +37,7 @@
     "oauth-1.0a": "^2.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.9.0",
     "react-komposer": "^2.0.0",
     "react-player": "^0.14.1",
     "react-router": "^3.0.1",
@@ -47,7 +47,8 @@
     "react-tabs": "^0.8.2",
     "rxjs": "^5.0.3",
     "serve-favicon": "^2.3.2",
-    "socket.io-client": "^1.7.2"
+    "socket.io-client": "^1.7.2",
+    "superagent": "^3.3.2"
   },
   "devDependencies": {
     "babel-polyfill": "^6.20.0",
