--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "react-tabs": "^0.8.2",
     "rxjs": "^5.0.3",
     "serve-favicon": "^2.3.2",
-    "socket.io-client": "^1.7.2",
-    "superagent": "^3.3.2"
+    "socket.io-client": "^1.7.2"
   },
   "devDependencies": {
     "babel-polyfill": "^6.20.0",
