--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.9.0",
+    "react-infinite-scroller": "^1.0.5",
     "react-komposer": "^2.0.0",
     "react-player": "^0.14.1",
     "react-router": "^3.0.1",
