--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formsy-react": "^0.19.0",
     "formsy-react-components": "^0.9.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "oauth-1.0a": "^2.0.0",
     "rc-pagination": "^1.6.5",
     "rc-select": "^6.7.1",
