--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ script:
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
 after_success:
   - bash <(curl -X POST --data "apiKey=$apiKey&branch=$BRANCH" http://$url/update)
+notifications:
+  slack:
+    on_success: change
+    on_failure: always
+    rooms:
+          - schul-cloud:6Kefiuws4KEH3JOWnpfU1NhY#ci
