--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "method-override": "^2.3.7",
     "moment": "^2.17.1",
     "morgan": "~1.7.0",
+    "oauth-1.0a": "^2.1.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "serve-favicon": "~2.3.2"
