--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "watch": "nodemon ./bin/www -w ./",
-    "lint": "eslint ./bin ./controllers ./helpers ./api.js ./app.js --ext .js --fix",
+    "lint": "eslint ./bin ./controllers ./helpers ./test ./api.js ./app.js --ext .js --fix",
     "startd": "echo 'Do you mean 'npm run watch'?'",
     "test": "npm run lint && npm run mocha",
     "mocha": "mocha test/ --recursive"
