--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint ./bin ./controllers ./helpers ./test ./api.js ./app.js --ext .js --fix",
     "startd": "echo 'Do you mean 'npm run watch'?'",
     "test": "npm run lint && npm run mocha",
-    "mocha": "mocha test/ --recursive"
+    "mocha": "mocha test/ --recursive",
+    "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
@@ -21,6 +22,7 @@
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
+    "istanbul": "^0.4.5",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
