--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-csso": "^2.0.0",
     "gulp-filelog": "^0.4.1",
     "gulp-imagemin": "^3.1.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
