--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "method-override": "^2.3.7",
     "moment": "^2.17.1",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "oauth-1.0a": "^2.1.0",
     "path.join": "^1.0.0",
     "request": "^2.79.0",
