--- a/package.json
+++ b/package.json
@@ -45,9 +45,12 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.0.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-count": "^0.3.0",
     "gulp-csso": "^2.0.0",
     "gulp-filelog": "^0.4.1",
     "gulp-imagemin": "^3.1.1",
+    "gulp-optimize-js": "^1.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^3.1.0",
