--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "~1.16.0",
     "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
+    "csv-parse": "^1.2.0",
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "express-session": "^1.15.2",
@@ -32,7 +33,8 @@
     "path.join": "^1.0.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "string_decoder": "^1.0.1"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.23.0",
