player js, video skipping, refactoring

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "pump": "^1.0.2",
+    "video.js": "^5.19.2",
     "vinyl-map": "^1.0.2"
   }
 }
