--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,6 @@ notifications:
     on_success: change
     on_failure: always
     on_pull_requests: false
+cache:
+  directories:
+    - node_modules
