--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "serve-favicon": "~2.3.2",
-    "string_decoder": "^1.0.1"
+    "string_decoder": "^1.0.1",
+    "strip-js": "^1.0.6"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.23.0",
