--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "serve-favicon": "~2.3.2",
+    "shortid": "^2.2.8",
     "string_decoder": "^1.0.1"
   },
   "devDependencies": {
