--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
+    "html-truncate": "^1.2.2",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
