--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "request-promise": "^4.1.1",
     "serve-favicon": "~2.3.2",
     "shortid": "^2.2.8",
+    "showdown": "^1.7.1",
     "string_decoder": "^1.0.1"
   },
   "devDependencies": {
