--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "serve-favicon": "~2.3.2",
     "shortid": "^2.2.8",
     "showdown": "^1.7.1",
-    "string_decoder": "^1.0.1"
+    "string_decoder": "^1.0.1",
     "truncate-html": "^0.1.4"
   },
   "devDependencies": {
