--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "express-session": "^1.15.2",
+    "feedr": "^2.13.5",
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
