re-add package json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon --ignore build --watch . --ext js,hbs ./bin/www",
+    "watch": "nodemon --watch ./ --watch views/ --watch controllers/ --watch build/ ./bin/www",
+    "debug": "nodemon --debug=5757 --watch ./ --watch views/ --watch controllers/ --watch build/ ./bin/www",
     "lint": "eslint ./bin ./controllers ./helpers ./test ./api.js ./app.js --ext .js --fix",
     "startd": "echo 'Do you mean 'npm run watch'?'",
     "test": "npm run lint && npm run mocha",
@@ -15,9 +16,11 @@
     "body-parser": "~1.16.0",
     "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
+    "csv-parse": "^1.2.0",
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "express-session": "^1.15.2",
+    "feedr": "^2.13.5",
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
@@ -27,28 +30,44 @@
     "method-override": "^2.3.7",
     "moment": "^2.17.1",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "oauth-1.0a": "^2.1.0",
     "path.join": "^1.0.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "shortid": "^2.2.8",
+    "showdown": "^1.7.1",
+    "string_decoder": "^1.0.1",
+    "truncate-html": "^0.1.4"
   },
   "devDependencies": {
-    "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "clean-css": "^4.0.8",
     "eslint": "^3.17.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.0.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-count": "^0.3.0",
     "gulp-csso": "^2.0.0",
+    "gulp-filelog": "^0.4.1",
     "gulp-imagemin": "^3.1.1",
+    "gulp-optimize-js": "^1.1.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
     "pump": "^1.0.2",
+    "video.js": "^5.19.2",
     "vinyl-map": "^1.0.2"
   }
 }
