--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,24 +12,13 @@ services:
       BACKEND_URL: http://schulcloud-server:3030/
     ports:
       - 3100:3100
-      # - 5858:5858
+      - 9310:9310
     external_links:
       - schulcloud-server:server
     volumes:
-      - .:/app
-    command: npm run watch
-
-  schulcloud-client-gulp:
-      image: schulcloud-client:latest
-      build:
-        context: .
-        dockerfile: Dockerfile
-      environment:
-        NODE_ENV: development
-      volumes:
-        - .:/app
-      # command: /opt/node_modules/.bin/gulp watch
-      command: /opt/node_modules/.bin/gulp
+      - .:/home/node/app
+      - /home/node/app/node_modules/
+    command: npm run debug
 
 networks:
   default:
