--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "watch": "nodemon --watch ./ --watch views/ --watch controllers/ --watch build/ ./bin/www",
-    "debug": "nodemon --debug=5757 --watch ./ --watch views/ --watch controllers/ --watch build/ ./bin/www",
+    "debug": "nodemon --inspect=0.0.0.0:9310 --watch ./ --watch views/ --watch controllers/ --watch build/ ./bin/www",
     "lint": "eslint ./bin ./controllers ./helpers ./test ./api.js ./app.js --ext .js --fix",
     "startd": "echo 'Do you mean 'npm run watch'?'",
     "test": "npm run lint && npm run mocha",
