--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,19 @@ services:
     volumes:
       - .:/home/node/app
       - /home/node/app/node_modules/
-      - /home/node/app/build/
+      - data-schulcloud-client-build:/home/node/app/build/
     command: npm run debug
+
+  schulcloud-client-gulp:
+    image: node:8.7.0
+    volumes:
+      - .:/home/node/app
+      - /home/node/app/node_modules/
+      - data-schulcloud-client-build:/home/node/app/build/
+    command: bash -c "npm install -gq gulp && cd /home/node/app && gulp watch"
+
+volumes:
+  data-schulcloud-client-build:
 
 #networks:
 #  default:
