--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
+    "ipaddr.js": "^1.5.4",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
@@ -33,6 +34,7 @@
     "multer": "^1.3.0",
     "oauth-1.0a": "^2.1.0",
     "path.join": "^1.0.0",
+    "query-string": "^5.0.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "serve-favicon": "~2.3.2",
