reworked gulpfile, gulp watch doesnt trigger full rebuild, now uses gulp-changed-in-place with builtin watch, instead of gulp-watch

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "eslint": "^3.17.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-changed-in-place": "^2.3.0",
     "gulp-clean-css": "^3.0.3",
     "gulp-concat": "^2.6.1",
     "gulp-count": "^0.3.0",
-    "gulp-csso": "^2.0.0",
     "gulp-filelog": "^0.4.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-optimize-js": "^1.1.0",
@@ -64,8 +64,6 @@
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "pump": "^1.0.2",
