--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
+    "maxmind": "^2.3.0",
     "method-override": "^2.3.7",
     "moment": "^2.17.1",
     "morgan": "~1.7.0",
