Revert "693 nexboard via api implementieren (#495)"
This reverts commit abb9c1716c9a34127a15c4ebb1fd8a6ef732038b.

--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "shortid": "^2.2.8",
     "showdown": "^1.7.1",
     "string_decoder": "^1.0.1",
-    "truncate-html": "^0.1.4",
-    "nexboard-api-js": "^1.0.5"
+    "truncate-html": "^0.1.4"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.23.0",
