working gulp changed smart

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ typings/
 # Optional eslint cache
 .eslintcache
 
+# gulp changed smart cache
+.gulp-changed-smart.json
+
 # Optional REPL history
 .node_repl_history
 
