use our version of gulp-sass

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-changed-smart": "^1.1.1",
-    "gulp-clean-css": "^3.9.2",
+    "gulp-clean-css": "^3.0.3",
     "gulp-concat": "^2.6.1",
     "gulp-count": "^0.3.0",
     "gulp-filelog": "^0.4.1",
@@ -68,10 +68,11 @@
     "gulp-optimize-js": "^1.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rimraf": "^0.2.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "git+https://github.com/schul-cloud/gulp-sass.git",
     "gulp-uglify": "^2.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "node-sass": "^4.7.2",
     "pump": "^1.0.2",
     "video.js": "^5.19.2",
     "vinyl-map": "^1.0.2"
