--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-count": "^0.3.0",
     "gulp-filelog": "^0.4.1",
     "gulp-header": "^2.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
     "gulp-optimize-js": "^1.1.0",
     "gulp-plumber": "^1.1.0",
