--- a/theme/n21/static/images/manifest.json
+++ b/theme/n21/static/images/manifest.json
@@ -13,7 +13,7 @@
             "type": "image/png"
         }
     ],
-    "start_url": "/?homescreen=1",
+    "start_url": "/?homescreen=1&theme=n21",
     "scope": "/",
     "theme_color": "#78aae5",
     "background_color": "#ffffff",
