small changes + gulp improvements

--- a/theme/n21/static/images/manifest.json
+++ b/theme/n21/static/images/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "BildungsCloud",
+    "name": "Niedersächsische BildungsCloud",
     "short_name": "BildungsCloud",
     "icons": [
         {
