--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before_install:
   - "sh -e /etc/init.d/xvfb start"
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
   - "gulp"
-  - "BACKEND_URL=htts://beta.schul-cloud.org:9000 pm2 start bin/www"
+  - "BACKEND_URL=https://beta.schul-cloud.org:9000 pm2 start bin/www"
 before_script:
-  - "sleep 15" 
+  - "sleep 5" 
   - chmod +x diff.sh
   - chmod +x frontend_test.sh
 script:
