--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ before_script:
 - chmod +x frontend_test.sh
 script:
 - npm test
-- ./node_modules/.bin/nightwatch -c nightwatch.conf.remote.json --env ie11,safari,ios,ffox,default
+- "./diff.sh"
+- "./frontend_test.sh"
 - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH;
   else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
 after_success:
