--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,11 @@ before_script:
 - chmod +x frontend_test.sh
 script:
 - npm test
-- "./diff.sh"
-- "./frontend_test.sh"
 - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH;
   else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+- git fetch
+- "./diff.sh"
+- "./frontend_test.sh"
 after_success:
 - bash <(curl -X POST --data "apiKey=$apiKey&branch=$BRANCH" http://$url/update)
 notifications:
