--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: node_js
 node_js:
 - '6'
 sudo: required
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 env:
 - BACKEND_URL=https://schul-cloud.org:8080/ SC_DEMO_USER_PASSWORD=schulcloud
 before_install:
