--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,8 @@ node_js:
 - '6'
 sudo: required
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
+  firefox: latest
 env:
 - BACKEND_URL=https://schul-cloud.org:8080/ SC_DEMO_USER_PASSWORD=schulcloud
 before_install:
