--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "gulp-optimize-js": "^1.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rimraf": "^0.2.1",
-    "gulp-sass": "git+https://github.com/schul-cloud/gulp-sass.git",
+    "gulp-sass": "^4.0.1",
     "gulp-sass-grapher": "^0.1.4",
     "gulp-uglify": "^2.0.1",
     "istanbul": "^0.4.5",
