--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ services:
   - mongodb
 env:
   - SC_DEMO_USER_PASSWORD=schulcloud
+before_script:
+  - npm install -g gulp-cli
 script:
+  - gulp
   - npm test
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
 after_success:
