some travis performance experiments

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "debug": "nodemon --inspect=0.0.0.0:9310 --watch controllers/ --watch helpers/ --watch views/ --ext js,hbs ./bin/www",
     "lint": "eslint ./bin ./controllers ./helpers ./test ./api.js ./app.js --ext .js --fix",
     "startd": "echo 'Do you mean 'npm run watch'?'",
-    "test": "npm run lint && gulp && npm run mocha",
+    "test": "npm run lint && gulp critical-styles && npm run mocha",
     "mocha": "mocha test/ --recursive",
     "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js"
   },
