fix für dummen travis config fehler

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ services:
   - mongodb
 env:
   - SC_DEMO_USER_PASSWORD=schulcloud
+-script:
   - npm test
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
 after_success:
