travis env variable was applied false

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ addons:
   chrome: stable
   firefox: latest
 env:
-- SC_DEMO_USER_PASSWORD=schulcloud
-- NIGHTWATCH=true
+- SC_DEMO_USER_PASSWORD=schulcloud NIGHTWATCH=true
 before_install:
 - npm install pm2 -g
 - export DISPLAY=:99.0
