--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "sass-lint-auto-fix": "^0.15.0",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
+    "video.js": "^5.19.2",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.16.1",
