--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "query-string": "^5.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-sortable-hoc": "^0.8.3",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "serve-favicon": "~2.3.2",
@@ -49,6 +50,7 @@
     "string-strip-html": "^1.1.0",
     "string_decoder": "^1.0.1",
     "truncate-html": "^0.1.4",
+    "vue": "^2.5.16",
     "winston": "^3.0.0"
   },
   "devDependencies": {
