--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "string-strip-html": "^1.1.0",
     "string_decoder": "^1.0.1",
     "truncate-html": "^0.1.4",
+    "vue": "^2.5.16",
     "winston": "^3.0.0"
   },
   "devDependencies": {
@@ -95,6 +96,8 @@
     "selenium-server": "^3.12.0",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
+    "vue-loader": "^15.2.4",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.14.0",
     "webpack-stream": "^4.0.3"
   }
