--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "~1.4.3",
     "csv-parse": "^1.2.0",
     "debug": "~2.6.0",
+    "diff-dom": "^2.4.0",
     "express": "~4.14.1",
     "express-session": "^1.15.2",
     "fast-csv": "^2.4.1",
