--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,13 @@
     "after": true,
     "before": true,
     "describe": true,
-    "it": true
+    "it": true,
+    "populateModalForm": true,
+    "showAJAXError": true,
+    "getQueryParameterByName": true,
+    "updateQueryStringParameter": true,
+    "populateModal": true,
+    "printPart": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
