--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
     "ipaddr.js": "^1.5.4",
+    "jquery-datetimepicker": "^2.5.20",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "maxmind": "^2.3.0",
     "method-override": "^2.3.7",
-    "moment": "^2.17.1",
+    "moment": "^2.22.2",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
     "nexboard-api-js": "git://github.com/schul-cloud/nexboard-api-js.git",
@@ -89,7 +90,6 @@
     "node-sass": "^4.7.2",
     "pump": "^1.0.2",
     "selenium-server": "^3.12.0",
-    "video.js": "^5.19.2",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.14.0",
