--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.15.2",
     "fast-csv": "^2.4.1",
     "feedr": "^2.13.5",
+    "fullcalendar": "^3.9.0",
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
@@ -66,6 +67,7 @@
     "clean-css": "^4.0.8",
     "env2": "^2.2.0",
     "eslint": "^3.17.1",
+    "expose-loader": "^0.7.5",
     "geckodriver": "^1.11.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
@@ -89,6 +91,7 @@
     "nightwatch": "^1.0.6",
     "node-sass": "^4.7.2",
     "pump": "^1.0.2",
+    "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
