[WIP] vue in schul-cloud?

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "string_decoder": "^1.0.1",
     "truncate-html": "^0.1.4",
     "vue": "^2.5.16",
+    "vue-material": "^1.0.0-beta-10.2",
     "winston": "^3.0.0"
   },
   "devDependencies": {
