--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "string_decoder": "^1.0.1",
     "truncate-html": "^0.1.4",
     "vue": "^2.5.16",
+    "vue-config": "^1.0.0",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-resource": "^1.5.1",
     "winston": "^3.0.0"
   },
   "devDependencies": {
@@ -67,6 +69,7 @@
     "chai-http": "^3.0.0",
     "chromedriver": "^2.38.3",
     "clean-css": "^4.0.8",
+    "css-loader": "^1.0.0",
     "env2": "^2.2.0",
     "eslint": "^3.17.1",
     "expose-loader": "^0.7.5",
@@ -93,8 +96,10 @@
     "nightwatch": "^1.0.6",
     "node-sass": "^4.7.2",
     "pump": "^1.0.2",
+    "sass-loader": "^7.0.3",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
+    "style-loader": "^0.21.0",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
     "vue-loader": "^15.2.4",
