Use rebuild-changed-entrypoints plugin in webpack to optimize rebuilds

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,6 @@ selenium-debug.log
 
 # VSCode Configuration file
 .vscode
+
+# Webpack Rebuild Changed Plugin Cache
+.webpack-changed-plugin-cache
