--- a/package.json
+++ b/package.json
@@ -91,11 +91,12 @@
     "nightwatch": "^1.0.6",
     "node-sass": "^4.7.2",
     "pump": "^1.0.2",
+    "rebuild-changed-entrypoints-webpack-plugin": "^0.0.1",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.14.0",
+    "webpack": "^4.16.1",
     "webpack-stream": "^4.0.3"
   }
 }
