--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-react-jsx": "^6.23.0",
@@ -64,13 +65,11 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "chromedriver": "^2.38.3",
-    "clean-css": "^4.0.8",
     "env2": "^2.2.0",
     "eslint": "^3.17.1",
     "expose-loader": "^0.7.5",
     "geckodriver": "^1.11.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-changed-smart": "^1.1.1",
     "gulp-clean-css": "^3.0.3",
@@ -82,9 +81,11 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-optimize-js": "^1.1.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^4.0.1",
     "gulp-sass-grapher": "^0.1.4",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^2.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
