--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,51 @@
 {
-    "extends": "airbnb-base",
-    "rules":{
-        "no-tabs": "off",
-        "indent": ["error", "tab", {
-            "SwitchCase": 1,
-            "VariableDeclarator": 1,
-            "outerIIFEBody": 1,
-            "FunctionDeclaration": {
-                "parameters": 1,
-                "body": 1
-            },
-            "FunctionExpression": {
-                "parameters": 1,
-                "body": 1
-            },
-            "CallExpression": {
-                "arguments": 1
-            },
-            "ArrayExpression": 1,
-            "ObjectExpression": 1,
-            "ImportDeclaration": 1,
-            "flatTernaryExpressions": false,
-            "ignoredNodes": ["JSXElement", "JSXElement > *", "JSXAttribute", "JSXIdentifier", "JSXNamespacedName", "JSXMemberExpression", "JSXSpreadAttribute", "JSXExpressionContainer", "JSXOpeningElement", "JSXClosingElement", "JSXText", "JSXEmptyExpression", "JSXSpreadChild"],
-            "ignoreComments": false
-      }]
-    },
-    "plugins": [
-        "import"
-    ]
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "globals": {
+    "_": true,
+    "$": true,
+    "after": true,
+    "before": true,
+    "describe": true,
+    "it": true,
+    "populateModalForm": true,
+    "showAJAXError": true,
+    "getQueryParameterByName": true,
+    "updateQueryStringParameter": true,
+    "populateModal": true,
+    "printPart": true
+  },
+  "extends": "airbnb-base",
+  "rules":{
+      "no-tabs": "off",
+      "indent": ["error", "tab", {
+          "SwitchCase": 1,
+          "VariableDeclarator": 1,
+          "outerIIFEBody": 1,
+          "FunctionDeclaration": {
+              "parameters": 1,
+              "body": 1
+          },
+          "FunctionExpression": {
+              "parameters": 1,
+              "body": 1
+          },
+          "CallExpression": {
+              "arguments": 1
+          },
+          "ArrayExpression": 1,
+          "ObjectExpression": 1,
+          "ImportDeclaration": 1,
+          "flatTernaryExpressions": false,
+          "ignoredNodes": ["JSXElement", "JSXElement > *", "JSXAttribute", "JSXIdentifier", "JSXNamespacedName", "JSXMemberExpression", "JSXSpreadAttribute", "JSXExpressionContainer", "JSXOpeningElement", "JSXClosingElement", "JSXText", "JSXEmptyExpression", "JSXSpreadChild"],
+          "ignoreComments": false
+    }]
+  },
+  "plugins": [
+      "import"
+  ]
 }
