aj/sass-lint (#864)
* WIP - sass formatter (config is ignored)

* WIP rules

* updated sass-lint.yml config

* minor changes

* added silent fix flag

* more forgiving rules

* disabled pseudo nesting

* disable function-name -format because bootstrap and our colorVariables are using a different naming scheme

* ooops, changed wrong value

* (final) setting changes

* added autofix options

--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "watch": "nodemon --watch ./ --watch views/ --watch controllers/ --watch build/ --ext js,hbs ./bin/www",
     "debug": "nodemon --inspect=9310 --watch controllers/ --watch helpers/ --watch views/ --ext js,hbs ./bin/www",
     "lint": "eslint ./bin ./controllers ./helpers ./test/mocha ./api.js ./app.js --ext .js --fix",
+    "sasslint": "sass-lint -q -v",
+    "sasslint:fix": "sass-lint-auto-fix -s -c ./.sass-lint-auto-fix.yml && sass-lint -q -v",
     "startd": "echo 'Do you mean 'npm run watch'?'",
     "test": "npm run lint && npm run mocha",
     "mocha": "mocha test/mocha/ --recursive",
     "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js",
     "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox"
   },
+  "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
     "body-parser": "~1.16.0",
     "compression": "^1.6.2",
@@ -96,6 +99,8 @@
     "nodemon": "^1.18.3",
     "pump": "^1.0.2",
     "rebuild-changed-entrypoints-webpack-plugin": "^1.0.1",
+    "sass-lint": "^1.12.1",
+    "sass-lint-auto-fix": "^0.15.0",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
     "vinyl-map": "^1.0.2",
