Remove static vendor file and load library from github instead

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nexboard-api-js": "git://github.com/schul-cloud/nexboard-api-js.git",
     "oauth-1.0a": "^2.1.0",
     "path.join": "^1.0.0",
+    "planner-core-lib": "https://github.com/schul-cloud/planner.git",
     "query-string": "^5.0.1",
     "querystring": "^0.2.0",
     "react": "^16.4.1",
@@ -77,6 +78,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "chromedriver": "^2.38.3",
+    "css-loader": "^1.0.1",
     "env2": "^2.2.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -112,6 +114,7 @@
     "sass-lint-auto-fix": "^0.15.0",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
+    "style-loader": "^0.23.1",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.16.1",
