Fix regression from webpack 4 update

--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
     "autoprefixer": "^9.0.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -86,7 +86,7 @@
     "expose-loader": "^0.7.5",
     "geckodriver": "^1.11.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0",
+    "gulp-babel": "8.0.0",
     "gulp-changed-smart": "^1.1.1",
     "gulp-clean-css": "^3.0.3",
     "gulp-concat": "^2.6.1",
